# Project-DEEP-LEARNING-Arabic-Fake-News-Detection

./: README.md
AFNDetection/: README.md  pyproject.toml  requirements.txt
AFNDetection/app/: flask_app.py
AFNDetection/app/web/static/css/: style.css
AFNDetection/app/web/static/js/: app.js
AFNDetection/app/web/templates/: index.html
AFNDetection/configs/: app.yaml  train_arabic.yaml  train_arabic_curated.yaml
AFNDetection/data/raw/: arabic_curated.csv
AFNDetection/notebooks/: AFNDetection_Colab.ipynb  AFNDetection_v2_Colab.ipynb
AFNDetection/scripts/: materialize_arabic_curated.py  prepare_parquet.py  train.py  validate_datasets.py
AFNDetection/src/fndarija/: __init__.py  config.py
AFNDetection/src/fndarija/data/: loaders.py  preprocess.py
AFNDetection/src/fndarija/inference/: predict.py
AFNDetection/src/fndarija/models/: classifier.py
AFNDetection/src/fndarija/training/: run.py
AFNDetection/tests/: test_preprocess.py
