[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fndarija"
version = "0.1.0"
description = "Arabic (MSA) fake news detection — fine-tuned transformer classifier"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
